feat: 更新使用层

--- a/C06_automatic.ipynb
+++ b/C06_automatic.ipynb
@@ -309,7 +309,7 @@
     "plt.plot(x, y, '.', label=\"数据\")\n",
     "plt.plot(x, f(x), label=\"真实值\")\n",
     "plt.plot(x, model(x), label=\"预测值\")\n",
-    "plt.legend()\n",
+    "plt.legend() # 绘制图例\n",
     "plt.show()\n",
     "print(\"当前损失值: %1.6f\" % loss(model(x), y).numpy())"
    ],
