--- a/C08_Sequential.ipynb
+++ b/C08_Sequential.ipynb
@@ -48,7 +48,7 @@
     "# 创建模型\n",
     "model = tf.keras.Sequential([\n",
     "    Input(shape=(1,)), # 1维输入\n",
-    "    layers.Dense(units=1) # 1个神经元(运算单元)的全连接层\n",
+    "    layers.Dense(units=1) # 1个神经元(运算单元)的全连接层 一维输入的 Dense 全连接层，刚好就是【一个权重 w + 一个偏置 b】完美符合建模需求 输出 = x * w + b\n",
     "])\n",
     "\n",
     "# 查看模型摘要\n",
@@ -77,17 +77,280 @@
    "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-13T15:29:02.826297Z",
+     "start_time": "2026-01-13T15:29:02.811329Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "# 编译配置模型\n",
     "model.compile(\n",
-    "    optimizer=tf.keras.optimizers.SGD(learning_rate=0.1), # 随机梯度下降优化器\n",
+    "    optimizer=\"sgd\",#tf.keras.optimizers.SGD(learning_rate=0.1), # 随机梯度下降优化器\n",
     "    loss='mean_squared_error'  # 均方误差损失函数 简写\n",
     ")"
    ],
-   "id": "38ab29d7c05d462f"
+   "id": "38ab29d7c05d462f",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-13T15:32:06.820423Z",
+     "start_time": "2026-01-13T15:32:05.742114Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 模型训练\n",
+    "model.fit(x,y,epochs=100)"
+   ],
+   "id": "869e269112b4bf8c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "7/7 [==============================] - 0s 556us/step - loss: 1.4621\n",
+      "Epoch 2/100\n",
+      "7/7 [==============================] - 0s 584us/step - loss: 1.3214\n",
+      "Epoch 3/100\n",
+      "7/7 [==============================] - 0s 587us/step - loss: 1.2181\n",
+      "Epoch 4/100\n",
+      "7/7 [==============================] - 0s 548us/step - loss: 1.1432\n",
+      "Epoch 5/100\n",
+      "7/7 [==============================] - 0s 495us/step - loss: 1.0962\n",
+      "Epoch 6/100\n",
+      "7/7 [==============================] - 0s 527us/step - loss: 1.0573\n",
+      "Epoch 7/100\n",
+      "7/7 [==============================] - 0s 456us/step - loss: 1.0311\n",
+      "Epoch 8/100\n",
+      "7/7 [==============================] - 0s 505us/step - loss: 1.0080\n",
+      "Epoch 9/100\n",
+      "7/7 [==============================] - 0s 482us/step - loss: 0.9937\n",
+      "Epoch 10/100\n",
+      "7/7 [==============================] - 0s 492us/step - loss: 0.9877\n",
+      "Epoch 11/100\n",
+      "7/7 [==============================] - 0s 502us/step - loss: 0.9803\n",
+      "Epoch 12/100\n",
+      "7/7 [==============================] - 0s 530us/step - loss: 0.9748\n",
+      "Epoch 13/100\n",
+      "7/7 [==============================] - 0s 570us/step - loss: 0.9694\n",
+      "Epoch 14/100\n",
+      "7/7 [==============================] - 0s 500us/step - loss: 0.9663\n",
+      "Epoch 15/100\n",
+      "7/7 [==============================] - 0s 530us/step - loss: 0.9644\n",
+      "Epoch 16/100\n",
+      "7/7 [==============================] - 0s 446us/step - loss: 0.9611\n",
+      "Epoch 17/100\n",
+      "7/7 [==============================] - 0s 512us/step - loss: 0.9596\n",
+      "Epoch 18/100\n",
+      "7/7 [==============================] - 0s 520us/step - loss: 0.9586\n",
+      "Epoch 19/100\n",
+      "7/7 [==============================] - 0s 494us/step - loss: 0.9572\n",
+      "Epoch 20/100\n",
+      "7/7 [==============================] - 0s 452us/step - loss: 0.9569\n",
+      "Epoch 21/100\n",
+      "7/7 [==============================] - 0s 615us/step - loss: 0.9564\n",
+      "Epoch 22/100\n",
+      "7/7 [==============================] - 0s 653us/step - loss: 0.9575\n",
+      "Epoch 23/100\n",
+      "7/7 [==============================] - 0s 531us/step - loss: 0.9574\n",
+      "Epoch 24/100\n",
+      "7/7 [==============================] - 0s 590us/step - loss: 0.9577\n",
+      "Epoch 25/100\n",
+      "7/7 [==============================] - 0s 524us/step - loss: 0.9563\n",
+      "Epoch 26/100\n",
+      "7/7 [==============================] - 0s 473us/step - loss: 0.9574\n",
+      "Epoch 27/100\n",
+      "7/7 [==============================] - 0s 521us/step - loss: 0.9564\n",
+      "Epoch 28/100\n",
+      "7/7 [==============================] - 0s 445us/step - loss: 0.9572\n",
+      "Epoch 29/100\n",
+      "7/7 [==============================] - 0s 558us/step - loss: 0.9573\n",
+      "Epoch 30/100\n",
+      "7/7 [==============================] - 0s 573us/step - loss: 0.9563\n",
+      "Epoch 31/100\n",
+      "7/7 [==============================] - 0s 522us/step - loss: 0.9567\n",
+      "Epoch 32/100\n",
+      "7/7 [==============================] - 0s 461us/step - loss: 0.9573\n",
+      "Epoch 33/100\n",
+      "7/7 [==============================] - 0s 500us/step - loss: 0.9571\n",
+      "Epoch 34/100\n",
+      "7/7 [==============================] - 0s 708us/step - loss: 0.9570\n",
+      "Epoch 35/100\n",
+      "7/7 [==============================] - 0s 742us/step - loss: 0.9564\n",
+      "Epoch 36/100\n",
+      "7/7 [==============================] - 0s 767us/step - loss: 0.9563\n",
+      "Epoch 37/100\n",
+      "7/7 [==============================] - 0s 616us/step - loss: 0.9570\n",
+      "Epoch 38/100\n",
+      "7/7 [==============================] - 0s 621us/step - loss: 0.9574\n",
+      "Epoch 39/100\n",
+      "7/7 [==============================] - 0s 660us/step - loss: 0.9570\n",
+      "Epoch 40/100\n",
+      "7/7 [==============================] - 0s 642us/step - loss: 0.9573\n",
+      "Epoch 41/100\n",
+      "7/7 [==============================] - 0s 684us/step - loss: 0.9570\n",
+      "Epoch 42/100\n",
+      "7/7 [==============================] - 0s 755us/step - loss: 0.9576\n",
+      "Epoch 43/100\n",
+      "7/7 [==============================] - 0s 666us/step - loss: 0.9574\n",
+      "Epoch 44/100\n",
+      "7/7 [==============================] - 0s 545us/step - loss: 0.9564\n",
+      "Epoch 45/100\n",
+      "7/7 [==============================] - 0s 629us/step - loss: 0.9573\n",
+      "Epoch 46/100\n",
+      "7/7 [==============================] - 0s 752us/step - loss: 0.9565\n",
+      "Epoch 47/100\n",
+      "7/7 [==============================] - 0s 770us/step - loss: 0.9561\n",
+      "Epoch 48/100\n",
+      "7/7 [==============================] - 0s 778us/step - loss: 0.9567\n",
+      "Epoch 49/100\n",
+      "7/7 [==============================] - 0s 674us/step - loss: 0.9563\n",
+      "Epoch 50/100\n",
+      "7/7 [==============================] - 0s 640us/step - loss: 0.9562\n",
+      "Epoch 51/100\n",
+      "7/7 [==============================] - 0s 574us/step - loss: 0.9565\n",
+      "Epoch 52/100\n",
+      "7/7 [==============================] - 0s 739us/step - loss: 0.9571\n",
+      "Epoch 53/100\n",
+      "7/7 [==============================] - 0s 599us/step - loss: 0.9569\n",
+      "Epoch 54/100\n",
+      "7/7 [==============================] - 0s 544us/step - loss: 0.9565\n",
+      "Epoch 55/100\n",
+      "7/7 [==============================] - 0s 537us/step - loss: 0.9565\n",
+      "Epoch 56/100\n",
+      "7/7 [==============================] - 0s 478us/step - loss: 0.9573\n",
+      "Epoch 57/100\n",
+      "7/7 [==============================] - 0s 707us/step - loss: 0.9575\n",
+      "Epoch 58/100\n",
+      "7/7 [==============================] - 0s 782us/step - loss: 0.9573\n",
+      "Epoch 59/100\n",
+      "7/7 [==============================] - 0s 706us/step - loss: 0.9567\n",
+      "Epoch 60/100\n",
+      "7/7 [==============================] - 0s 582us/step - loss: 0.9571\n",
+      "Epoch 61/100\n",
+      "7/7 [==============================] - 0s 658us/step - loss: 0.9570\n",
+      "Epoch 62/100\n",
+      "7/7 [==============================] - 0s 748us/step - loss: 0.9565\n",
+      "Epoch 63/100\n",
+      "7/7 [==============================] - 0s 1ms/step - loss: 0.9574\n",
+      "Epoch 64/100\n",
+      "7/7 [==============================] - 0s 699us/step - loss: 0.9564\n",
+      "Epoch 65/100\n",
+      "7/7 [==============================] - 0s 691us/step - loss: 0.9567\n",
+      "Epoch 66/100\n",
+      "7/7 [==============================] - 0s 603us/step - loss: 0.9567\n",
+      "Epoch 67/100\n",
+      "7/7 [==============================] - 0s 596us/step - loss: 0.9560\n",
+      "Epoch 68/100\n",
+      "7/7 [==============================] - 0s 746us/step - loss: 0.9569\n",
+      "Epoch 69/100\n",
+      "7/7 [==============================] - 0s 585us/step - loss: 0.9561\n",
+      "Epoch 70/100\n",
+      "7/7 [==============================] - 0s 495us/step - loss: 0.9572\n",
+      "Epoch 71/100\n",
+      "7/7 [==============================] - 0s 551us/step - loss: 0.9564\n",
+      "Epoch 72/100\n",
+      "7/7 [==============================] - 0s 575us/step - loss: 0.9567\n",
+      "Epoch 73/100\n",
+      "7/7 [==============================] - 0s 584us/step - loss: 0.9572\n",
+      "Epoch 74/100\n",
+      "7/7 [==============================] - 0s 609us/step - loss: 0.9570\n",
+      "Epoch 75/100\n",
+      "7/7 [==============================] - 0s 603us/step - loss: 0.9568\n",
+      "Epoch 76/100\n",
+      "7/7 [==============================] - 0s 494us/step - loss: 0.9565\n",
+      "Epoch 77/100\n",
+      "7/7 [==============================] - 0s 490us/step - loss: 0.9572\n",
+      "Epoch 78/100\n",
+      "7/7 [==============================] - 0s 497us/step - loss: 0.9559\n",
+      "Epoch 79/100\n",
+      "7/7 [==============================] - 0s 498us/step - loss: 0.9566\n",
+      "Epoch 80/100\n",
+      "7/7 [==============================] - 0s 565us/step - loss: 0.9567\n",
+      "Epoch 81/100\n",
+      "7/7 [==============================] - 0s 543us/step - loss: 0.9566\n",
+      "Epoch 82/100\n",
+      "7/7 [==============================] - 0s 581us/step - loss: 0.9565\n",
+      "Epoch 83/100\n",
+      "7/7 [==============================] - 0s 618us/step - loss: 0.9578\n",
+      "Epoch 84/100\n",
+      "7/7 [==============================] - 0s 525us/step - loss: 0.9582\n",
+      "Epoch 85/100\n",
+      "7/7 [==============================] - 0s 480us/step - loss: 0.9567\n",
+      "Epoch 86/100\n",
+      "7/7 [==============================] - 0s 457us/step - loss: 0.9572\n",
+      "Epoch 87/100\n",
+      "7/7 [==============================] - 0s 506us/step - loss: 0.9568\n",
+      "Epoch 88/100\n",
+      "7/7 [==============================] - 0s 699us/step - loss: 0.9569\n",
+      "Epoch 89/100\n",
+      "7/7 [==============================] - 0s 669us/step - loss: 0.9562\n",
+      "Epoch 90/100\n",
+      "7/7 [==============================] - 0s 579us/step - loss: 0.9572\n",
+      "Epoch 91/100\n",
+      "7/7 [==============================] - 0s 549us/step - loss: 0.9567\n",
+      "Epoch 92/100\n",
+      "7/7 [==============================] - 0s 695us/step - loss: 0.9559\n",
+      "Epoch 93/100\n",
+      "7/7 [==============================] - 0s 710us/step - loss: 0.9570\n",
+      "Epoch 94/100\n",
+      "7/7 [==============================] - 0s 646us/step - loss: 0.9570\n",
+      "Epoch 95/100\n",
+      "7/7 [==============================] - 0s 531us/step - loss: 0.9563\n",
+      "Epoch 96/100\n",
+      "7/7 [==============================] - 0s 600us/step - loss: 0.9572\n",
+      "Epoch 97/100\n",
+      "7/7 [==============================] - 0s 548us/step - loss: 0.9582\n",
+      "Epoch 98/100\n",
+      "7/7 [==============================] - 0s 726us/step - loss: 0.9563\n",
+      "Epoch 99/100\n",
+      "7/7 [==============================] - 0s 672us/step - loss: 0.9568\n",
+      "Epoch 100/100\n",
+      "7/7 [==============================] - 0s 611us/step - loss: 0.9571\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x135dd6790>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-13T15:32:08.792168Z",
+     "start_time": "2026-01-13T15:32:08.770794Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 查看现在训练的权重和偏置\n",
+    "print(model.variables)"
+   ],
+   "id": "b5b43b33489caea9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Variable 'dense/kernel:0' shape=(1, 1) dtype=float32, numpy=array([[3.0705059]], dtype=float32)>, <tf.Variable 'dense/bias:0' shape=(1,) dtype=float32, numpy=array([1.9533838], dtype=float32)>]\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   }
  ],
  "metadata": {
