feat: 开始逻辑回归问题

--- a/C09_linear_regression.ipynb
+++ b/C09_linear_regression.ipynb
@@ -67,7 +67,11 @@
     "    layers.Dense(units=16, activation='relu'),  # 隐藏层3\n",
     "    layers.Dense(units=1)  # 输出层 线性激活 预测房价是一个标量\n",
     "])\n",
-    "model.summary()"
+    "model.summary()\n",
+    "# x_train.shape[1] 开始是8，所以初始的输入维度是8\n",
+    "# 每一层参数个数等于 输入维度*输出维度+偏置个数(输出维度)\n",
+    "# 第一层参数个数 8*64+64=576\n",
+    "# 第二层参数个数 64*32+32=2080  第一层输出维度也就是第二层输入维度是64"
    ],
    "id": "b3d9ca1babe2fe24",
    "outputs": [
