--- a/C12_functioncall_api.ipynb
+++ b/C12_functioncall_api.ipynb
@@ -2,15 +2,120 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2026-01-14T02:55:22.484567Z",
+     "start_time": "2026-01-14T02:55:22.399557Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import tensorflow as tf\n",
+    "from keras import Input, layers, models\n",
+    "\n",
+    "# 单一输入和输出\n",
+    "\n",
+    "# 输入层\n",
+    "inputs = Input(shape=(4,))\n",
+    "# 全连接层 堆叠\n",
+    "x = layers.Dense(64,activation='relu')(inputs)\n",
+    "# 输出层\n",
+    "outputs = layers.Dense(10,activation='softmax')(x)\n",
+    "\n",
+    "model = models.Model(inputs=inputs, outputs=outputs)\n",
+    "\n",
+    "# 查看模型结构\n",
+    "model.summary()"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_2 (InputLayer)        [(None, 4)]               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                320       \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 10)                650       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 970 (3.79 KB)\n",
+      "Trainable params: 970 (3.79 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-14T02:57:35.347685Z",
+     "start_time": "2026-01-14T02:57:35.240362Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 多个输入和输出\n",
+    "# 输入层1\n",
+    "inputA = Input(shape=(64,), name='inputA')\n",
+    "# 输入层2\n",
+    "inputB = Input(shape=(128,), name='inputB')\n",
+    "# 全连接层1\n",
+    "x = layers.Dense(32, activation='relu')(inputA)\n",
+    "# 全连接层2\n",
+    "y = layers.Dense(32, activation='relu')(inputB)\n",
+    "# 合并层\n",
+    "combined = layers.concatenate([x, y])\n",
+    "# 输出层1\n",
+    "z1 = layers.Dense(1, activation='sigmoid', name='output1')(combined) # 二分类\n",
+    "# 输出层2\n",
+    "z2 = layers.Dense(10, activation='softmax', name='output2')(combined) # 多分类\n",
+    "# 构建模型\n",
+    "model = models.Model(inputs=[inputA, inputB], outputs=[z1, z2])\n",
+    "# 查看模型结构\n",
+    "model.summary() # 支持了多输入多输出"
+   ],
+   "id": "b2740e76caf8076b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
+      "==================================================================================================\n",
+      " inputA (InputLayer)         [(None, 64)]                 0         []                            \n",
+      "                                                                                                  \n",
+      " inputB (InputLayer)         [(None, 128)]                0         []                            \n",
+      "                                                                                                  \n",
+      " dense_3 (Dense)             (None, 32)                   2080      ['inputA[0][0]']              \n",
+      "                                                                                                  \n",
+      " dense_4 (Dense)             (None, 32)                   4128      ['inputB[0][0]']              \n",
+      "                                                                                                  \n",
+      " concatenate (Concatenate)   (None, 64)                   0         ['dense_3[0][0]',             \n",
+      "                                                                     'dense_4[0][0]']             \n",
+      "                                                                                                  \n",
+      " output1 (Dense)             (None, 1)                    65        ['concatenate[0][0]']         \n",
+      "                                                                                                  \n",
+      " output2 (Dense)             (None, 10)                   650       ['concatenate[0][0]']         \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 6923 (27.04 KB)\n",
+      "Trainable params: 6923 (27.04 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
